--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <h1>Welcome to My Website</h1>
+        <h1>hello github</h1>
         <p>This is a simple HTML and CSS example.</p>
         <button>Click Me</button>
     </div>
